SidebarHome CSS styles added for Default & Dark Themes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 	</head>
 
 	<body>
-		<sidebar-home></sidebar-home>
+		<sidebar-home class="default"></sidebar-home>
+		<sidebar-home class="dark"></sidebar-home>
 	</body>
 
 </html>
