--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			crossorigin
 		>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap"
 			rel="stylesheet"
 		>
 		<link
