--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<title>Twitter</title>
 	</head>
 
-	<body>
+	<body style="background-color: var(--secondary-15);">
 		<sidebar-home class="default"></sidebar-home>
 		<sidebar-home class="dark"></sidebar-home>
 	</body>
