--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
 	<body style="background-color: var(--secondary-15);">
 		<sidebar-home class="default"></sidebar-home>
 		<sidebar-home class="dark"></sidebar-home>
+		<sidebar-explore class="default"></sidebar-explore>
+		<sidebar-explore class="dark"></sidebar-explore>
+		<sidebar-notification class="default"></sidebar-notification>
+		<sidebar-notification class="dark"></sidebar-notification>
+		<sidebar-bookmark class="default"></sidebar-bookmark>
+		<sidebar-bookmark class="dark"></sidebar-bookmark>
+		<sidebar-more class="default"></sidebar-more>
+		<sidebar-more class="dark"></sidebar-more>
+		<sidebar-list class="default"></sidebar-list>
+		<sidebar-list class="dark"></sidebar-list>
+		<sidebar-profile class="default"></sidebar-profile>
+		<sidebar-profile class="dark"></sidebar-profile>
 	</body>
 
 </html>
