Sidebar active font bold style and logo designed

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 	</head>
 
 	<body style="background-color: var(--secondary-15);">
+		<sidebar-logo class="default"></sidebar-logo>
+		<sidebar-logo class="dark"></sidebar-logo>
+		<sidebar-moon class="default"></sidebar-moon>
+		<sidebar-moon class="dark"></sidebar-moon>
 		<sidebar-home class="default"></sidebar-home>
 		<sidebar-home class="dark"></sidebar-home>
 		<sidebar-explore class="default"></sidebar-explore>
