Button Styles and Components Designed

--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
 	</head>
 
 	<body style="background-color: var(--secondary-15);">
+
+		<primary-button
+			label="Tweet"
+			class="default large"
+		></primary-button>
+		<primary-button
+			label="Tweet"
+			class="default regular"
+		></primary-button>
+
+		<primary-button
+			label="Tweet"
+			class="dark large"
+		></primary-button>
+		<primary-button
+			label="Tweet"
+			class="dark regular"
+		></primary-button>
+
 		<sidebar-logo class="default"></sidebar-logo>
 		<sidebar-logo class="dark"></sidebar-logo>
 		<sidebar-moon class="default"></sidebar-moon>
