Sidebar username designed and attributes added

--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
 			class="dark regular"
 		></primary-button>
 
+		<sidebar-username
+			image="./images/Profile.png"
+			account="Hossein Boroji"
+			username="@sampleTwitterUser"
+			class="default"
+		>
+		</sidebar-username>
+
+		<sidebar-username
+			image="./images/Profile.png"
+			account="Hossein Boroji"
+			username="@sampleTwitterUser"
+			class="dark"
+		>
+		</sidebar-username>
+
+
 		<sidebar-logo class="default"></sidebar-logo>
 		<sidebar-logo class="dark"></sidebar-logo>
 		<sidebar-moon class="default"></sidebar-moon>
