Sidebar layout finalized with dark theme event listenser

--- a/index.html
+++ b/index.html
@@ -31,61 +31,39 @@
 		<title>Twitter</title>
 	</head>
 
-	<body style="background-color: var(--secondary-15);">
+	<body class="light-theme">
 
-		<primary-button
-			label="Tweet"
-			class="default large"
-		></primary-button>
-		<primary-button
-			label="Tweet"
-			class="default regular"
-		></primary-button>
+		<aside>
+			<header>
+				<sidebar-logo class="default"></sidebar-logo>
+				<sidebar-moon class="default"></sidebar-moon>
+			</header>
 
-		<primary-button
-			label="Tweet"
-			class="dark large"
-		></primary-button>
-		<primary-button
-			label="Tweet"
-			class="dark regular"
-		></primary-button>
+			<section>
+				<sidebar-home class="default"></sidebar-home>
+				<sidebar-explore class="default"></sidebar-explore>
+				<sidebar-notification class="default"></sidebar-notification>
+				<sidebar-bookmark class="default"></sidebar-bookmark>
+				<sidebar-list class="default"></sidebar-list>
+				<sidebar-profile class="default"></sidebar-profile>
+				<sidebar-more class="default"></sidebar-more>
+			</section>
+			<primary-button
+				label="Tweet"
+				class="default large"
+			></primary-button>
 
-		<sidebar-username
-			image="./images/Profile.png"
-			account="Hossein Boroji"
-			username="@sampleTwitterUser"
-			class="default"
-		>
-		</sidebar-username>
+			<footer>
+				<sidebar-username
+					image="./images/Profile.png"
+					account="Hossein Boroji"
+					username="@sampleTwitterUser"
+					class="default"
+				>
+				</sidebar-username>
+			</footer>
+		</aside>
 
-		<sidebar-username
-			image="./images/Profile.png"
-			account="Hossein Boroji"
-			username="@sampleTwitterUser"
-			class="dark"
-		>
-		</sidebar-username>
-
-
-		<sidebar-logo class="default"></sidebar-logo>
-		<sidebar-logo class="dark"></sidebar-logo>
-		<sidebar-moon class="default"></sidebar-moon>
-		<sidebar-moon class="dark"></sidebar-moon>
-		<sidebar-home class="default"></sidebar-home>
-		<sidebar-home class="dark"></sidebar-home>
-		<sidebar-explore class="default"></sidebar-explore>
-		<sidebar-explore class="dark"></sidebar-explore>
-		<sidebar-notification class="default"></sidebar-notification>
-		<sidebar-notification class="dark"></sidebar-notification>
-		<sidebar-bookmark class="default"></sidebar-bookmark>
-		<sidebar-bookmark class="dark"></sidebar-bookmark>
-		<sidebar-more class="default"></sidebar-more>
-		<sidebar-more class="dark"></sidebar-more>
-		<sidebar-list class="default"></sidebar-list>
-		<sidebar-list class="dark"></sidebar-list>
-		<sidebar-profile class="default"></sidebar-profile>
-		<sidebar-profile class="dark"></sidebar-profile>
 	</body>
 
 </html>
