Padding size fix and dropdown directory added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 			src="./app.js"
 		></script>
 		<title>Twitter</title>
+		<style>
+			#test {
+				display: flex;
+				place-items: center;
+			}
+
+		</style>
 	</head>
 
 	<body class="light-theme">
@@ -63,6 +70,10 @@
 				</sidebar-username>
 			</footer>
 		</aside>
+
+		<div id="test">
+			<dropdown-topic class="default"></dropdown-topic>
+		</div>
 
 	</body>
 
