Dropdown layout designed and added to HTML

--- a/index.html
+++ b/index.html
@@ -29,13 +29,6 @@
 			src="./app.js"
 		></script>
 		<title>Twitter</title>
-		<style>
-			#test {
-				display: flex;
-				place-items: center;
-			}
-
-		</style>
 	</head>
 
 	<body class="light-theme">
@@ -68,12 +61,19 @@
 					class="default"
 				>
 				</sidebar-username>
+				<div class="default">
+					<dropdown-topic class="default"></dropdown-topic>
+					<dropdown-news class="default"></dropdown-news>
+					<dropdown-spaces class="default"></dropdown-spaces>
+					<dropdown-ads class="default"></dropdown-ads>
+					<dropdown-analytics class="default"></dropdown-analytics>
+					<dropdown-settings class="default"></dropdown-settings>
+					<dropdown-help class="default"></dropdown-help>
+					<dropdown-display class="default"></dropdown-display>
+					<dropdown-shortcuts class="default"></dropdown-shortcuts>
+				</div>
 			</footer>
 		</aside>
-
-		<div id="test">
-			<dropdown-topic class="default"></dropdown-topic>
-		</div>
 
 	</body>
 
