Sidebar dropdown profile designed and added

--- a/index.html
+++ b/index.html
@@ -61,19 +61,46 @@
 					class="default"
 				>
 				</sidebar-username>
-				<div class="default">
+				<div
+					id="dropdownItems"
+					class="default"
+				>
 					<dropdown-topic class="default"></dropdown-topic>
 					<dropdown-news class="default"></dropdown-news>
 					<dropdown-spaces class="default"></dropdown-spaces>
 					<dropdown-ads class="default"></dropdown-ads>
 					<dropdown-analytics class="default"></dropdown-analytics>
+					<border-style class="default"></border-style>
 					<dropdown-settings class="default"></dropdown-settings>
 					<dropdown-help class="default"></dropdown-help>
 					<dropdown-display class="default"></dropdown-display>
 					<dropdown-shortcuts class="default"></dropdown-shortcuts>
 				</div>
+				<div
+					class="default"
+					id="dropdownUsername"
+				>
+					<dropdown-username
+						image="./images/Profile.png"
+						account="Hossein Boroji"
+						username="@sampleTwitterUser"
+						class="default"
+					>
+					</dropdown-username>
+					<border-style class="default"></border-style>
+					<dropdown-text
+						label="Add new account"
+						class="default"
+					></dropdown-text>
+					<dropdown-text
+						label="Logout"
+						class="default"
+					></dropdown-text>
+				</div>
 			</footer>
 		</aside>
+
+
 
 	</body>
 
