--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<dropdown-spaces class="default"></dropdown-spaces>
 					<dropdown-ads class="default"></dropdown-ads>
 					<dropdown-analytics class="default"></dropdown-analytics>
-					<border-style class="default"></border-style>
+					<horizonal-border class="default"></horizonal-border>
 					<dropdown-settings class="default"></dropdown-settings>
 					<dropdown-help class="default"></dropdown-help>
 					<dropdown-display class="default"></dropdown-display>
@@ -87,7 +87,7 @@
 						class="default"
 					>
 					</dropdown-username>
-					<border-style class="default"></border-style>
+					<horizonal-border class="default"></horizonal-border>
 					<dropdown-text
 						label="Add new account"
 						class="default"
@@ -99,8 +99,6 @@
 				</div>
 			</footer>
 		</aside>
-
-
 
 	</body>
 
