--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
 			</footer>
 		</aside>
 
+		<main>
+			<follow-info
+				image="./images/Profile.png"
+				account="Hossein Boroji"
+				username="@sampleTwitterUser"
+				class="default"
+			></follow-info>
+		</main>
 	</body>
 
 </html>
