Trending info component designed and image round corner added

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 			</footer>
 		</aside>
 
+
 		<main>
 			<follow-info
 				image="./images/Profile.png"
@@ -107,6 +108,15 @@
 				username="@sampleTwitterUser"
 				class="default"
 			></follow-info>
+			<trending-info
+				image="./images/Coffee.png"
+				username="@sampleTwitterUser"
+				content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit adipisci
+				porro vitae pariatur. Doloribus quo numquam ullam in, beatae sequi?"
+				hashtag="#World News"
+				time="24h"
+				class="default"
+			></trending-info>
 		</main>
 	</body>
 
