Newsfeed sidebar fully designed

--- a/index.html
+++ b/index.html
@@ -101,23 +101,78 @@
 		</aside>
 
 
-		<main>
-			<follow-info
-				image="./images/Profile.png"
-				account="Hossein Boroji"
-				username="@sampleTwitterUser"
-				class="default"
-			></follow-info>
-			<trending-info
-				image="./images/Coffee.png"
-				username="@sampleTwitterUser"
-				content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit adipisci
-				porro vitae pariatur. Doloribus quo numquam ullam in, beatae sequi?"
-				hashtag="#World News"
-				time="24h"
-				class="default"
-			></trending-info>
-		</main>
+		<main></main>
+
+		<article>
+			<type-style
+				class="size-20px bold default"
+				label="News Feed"
+			></type-style>
+			<div class="follow-info">
+				<follow-info
+					image="./images/Profile.png"
+					account="Hossein Boroji"
+					username="@sampleTwitterUser"
+					class="default"
+				></follow-info>
+				<follow-info
+					image="./images/Profile.png"
+					account="Hossein Boroji"
+					username="@sampleTwitterUser"
+					class="default"
+				></follow-info>
+				<follow-info
+					image="./images/Profile.png"
+					account="Hossein Boroji"
+					username="@sampleTwitterUser"
+					class="default"
+				></follow-info>
+				<follow-info
+					image="./images/Profile.png"
+					account="Hossein Boroji"
+					username="@sampleTwitterUser"
+					class="default"
+				></follow-info>
+			</div>
+			<type-style
+				class="size-20px bold default"
+				label="Who to follow"
+			></type-style>
+			<div class="trending-info">
+				<trending-info
+					image="./images/Coffee.png"
+					username="@sampleTwitterUser"
+					content="Placeholder content"
+					hashtag="#World News"
+					time="24h"
+					class="default"
+				></trending-info>
+				<trending-info
+					image="./images/Coffee.png"
+					username="@sampleTwitterUser"
+					content="Placeholder content"
+					hashtag="#World News"
+					time="24h"
+					class="default"
+				></trending-info>
+				<trending-info
+					image="./images/Coffee.png"
+					username="@sampleTwitterUser"
+					content="Placeholder content"
+					hashtag="#World News"
+					time="24h"
+					class="default"
+				></trending-info>
+				<trending-info
+					image="./images/Coffee.png"
+					username="@sampleTwitterUser"
+					content="Placeholder content"
+					hashtag="#World News"
+					time="24h"
+					class="default"
+				></trending-info>
+			</div>
+		</article>
 	</body>
 
 </html>
