Fixing scrollbar styles

--- a/index.html
+++ b/index.html
@@ -171,6 +171,38 @@
 					time="24h"
 					class="default"
 				></trending-info>
+				<trending-info
+					image="./images/Coffee.png"
+					username="@sampleTwitterUser"
+					content="Placeholder content"
+					hashtag="#World News"
+					time="24h"
+					class="default"
+				></trending-info>
+				<trending-info
+					image="./images/Coffee.png"
+					username="@sampleTwitterUser"
+					content="Placeholder content"
+					hashtag="#World News"
+					time="24h"
+					class="default"
+				></trending-info>
+				<trending-info
+					image="./images/Coffee.png"
+					username="@sampleTwitterUser"
+					content="Placeholder content"
+					hashtag="#World News"
+					time="24h"
+					class="default"
+				></trending-info>
+				<trending-info
+					image="./images/Coffee.png"
+					username="@sampleTwitterUser"
+					content="Placeholder content"
+					hashtag="#World News"
+					time="24h"
+					class="default"
+				></trending-info>
 			</div>
 		</article>
 	</body>
