Newsfeed responsive sidebar

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
 				<trending-info
 					image="./images/Coffee.png"
 					username="@sampleTwitterUser"
-					content="Placeholder content"
+					content=" Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quod
+					beatae sit error esse tempore eveniet, accusamus dicta ad nihil."
 					hashtag="#World News"
 					time="24h"
 					class="default"
@@ -150,7 +151,11 @@
 				<trending-info
 					image="./images/Coffee.png"
 					username="@sampleTwitterUser"
-					content="Placeholder content"
+					content=" Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum maiores,
+					exercitationem repellat fuga alias quam quidem, possimus, ullam repudiandae soluta
+					ex. Magnam, voluptatibus veritatis sapiente repudiandae sit non iure beatae odit,
+					doloribus tenetur, qui praesentium? Mollitia, similique iure a esse vero, quae eum
+					excepturi rerum dolor incidunt voluptates quod id."
 					hashtag="#World News"
 					time="24h"
 					class="default"
@@ -158,7 +163,10 @@
 				<trending-info
 					image="./images/Coffee.png"
 					username="@sampleTwitterUser"
-					content="Placeholder content"
+					content=" Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio officia ad
+					molestiae. Fugit error obcaecati dolores optio similique numquam sit quae cupiditate
+					ipsam animi quos, perferendis iusto. Amet error illo suscipit dolor qui adipisci
+					neque!"
 					hashtag="#World News"
 					time="24h"
 					class="default"
