Add data content to with images

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
 			<footer>
 				<sidebar-username
-					image="./images/Profile.png"
-					account="Hossein Boroji"
-					username="@sampleTwitterUser"
+					image="./Images/Avatar.jpg"
+					account="@hosseinboroji"
+					username="Hossein Boroji"
 					class="default"
 				>
 				</sidebar-username>
@@ -81,9 +81,9 @@
 					id="dropdownUsername"
 				>
 					<dropdown-username
-						image="./images/Profile.png"
-						account="Hossein Boroji"
-						username="@sampleTwitterUser"
+						image="./Images/Avatar.jpg"
+						account="@hosseinboroji"
+						username="Hossein Boroji"
 						class="default"
 					>
 					</dropdown-username>
@@ -110,25 +110,25 @@
 			></type-style>
 			<div class="follow-info">
 				<follow-info
-					image="./images/Profile.png"
+					image="./Images/Profile.png"
 					account="Hossein Boroji"
 					username="@sampleTwitterUser"
 					class="default"
 				></follow-info>
 				<follow-info
-					image="./images/Profile.png"
+					image="./Images/Profile.png"
 					account="Hossein Boroji"
 					username="@sampleTwitterUser"
 					class="default"
 				></follow-info>
 				<follow-info
-					image="./images/Profile.png"
+					image="./Images/Profile.png"
 					account="Hossein Boroji"
 					username="@sampleTwitterUser"
 					class="default"
 				></follow-info>
 				<follow-info
-					image="./images/Profile.png"
+					image="./Images/Profile.png"
 					account="Hossein Boroji"
 					username="@sampleTwitterUser"
 					class="default"
@@ -140,7 +140,7 @@
 			></type-style>
 			<div class="trending-info">
 				<trending-info
-					image="./images/Coffee.png"
+					image="./Images/Coffee.png"
 					username="@sampleTwitterUser"
 					content=" Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quod
 					beatae sit error esse tempore eveniet, accusamus dicta ad nihil."
@@ -149,7 +149,7 @@
 					class="default"
 				></trending-info>
 				<trending-info
-					image="./images/Coffee.png"
+					image="./Images/Coffee.png"
 					username="@sampleTwitterUser"
 					content=" Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum maiores,
 					exercitationem repellat fuga alias quam quidem, possimus, ullam repudiandae soluta
@@ -161,7 +161,7 @@
 					class="default"
 				></trending-info>
 				<trending-info
-					image="./images/Coffee.png"
+					image="./Images/Coffee.png"
 					username="@sampleTwitterUser"
 					content=" Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio officia ad
 					molestiae. Fugit error obcaecati dolores optio similique numquam sit quae cupiditate
@@ -172,7 +172,7 @@
 					class="default"
 				></trending-info>
 				<trending-info
-					image="./images/Coffee.png"
+					image="./Images/Coffee.png"
 					username="@sampleTwitterUser"
 					content="Placeholder content"
 					hashtag="#World News"
@@ -180,7 +180,7 @@
 					class="default"
 				></trending-info>
 				<trending-info
-					image="./images/Coffee.png"
+					image="./Images/Coffee.png"
 					username="@sampleTwitterUser"
 					content="Placeholder content"
 					hashtag="#World News"
@@ -188,7 +188,7 @@
 					class="default"
 				></trending-info>
 				<trending-info
-					image="./images/Coffee.png"
+					image="./Images/Coffee.png"
 					username="@sampleTwitterUser"
 					content="Placeholder content"
 					hashtag="#World News"
@@ -196,7 +196,7 @@
 					class="default"
 				></trending-info>
 				<trending-info
-					image="./images/Coffee.png"
+					image="./Images/Coffee.png"
 					username="@sampleTwitterUser"
 					content="Placeholder content"
 					hashtag="#World News"
@@ -204,7 +204,7 @@
 					class="default"
 				></trending-info>
 				<trending-info
-					image="./images/Coffee.png"
+					image="./Images/Coffee.png"
 					username="@sampleTwitterUser"
 					content="Placeholder content"
 					hashtag="#World News"
