Dynamically add content to the newsfeed

--- a/index.html
+++ b/index.html
@@ -110,110 +110,12 @@
 				class="size-20px bold default"
 				label="News Feed"
 			></type-style>
-			<div class="follow-info">
-				<follow-info
-					image="./Images/Profile.png"
-					account="Hossein Boroji"
-					username="@sampleTwitterUser"
-					class="default"
-				></follow-info>
-				<follow-info
-					image="./Images/Profile.png"
-					account="Hossein Boroji"
-					username="@sampleTwitterUser"
-					class="default"
-				></follow-info>
-				<follow-info
-					image="./Images/Profile.png"
-					account="Hossein Boroji"
-					username="@sampleTwitterUser"
-					class="default"
-				></follow-info>
-				<follow-info
-					image="./Images/Profile.png"
-					account="Hossein Boroji"
-					username="@sampleTwitterUser"
-					class="default"
-				></follow-info>
-			</div>
+			<div class="follow-info"></div>
 			<type-style
 				class="size-20px bold default"
 				label="Who to follow"
 			></type-style>
-			<div class="trending-info">
-				<trending-info
-					image="./Images/Coffee.png"
-					username="@sampleTwitterUser"
-					content=" Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quod
-					beatae sit error esse tempore eveniet, accusamus dicta ad nihil."
-					hashtag="#World News"
-					time="24h"
-					class="default"
-				></trending-info>
-				<trending-info
-					image="./Images/Coffee.png"
-					username="@sampleTwitterUser"
-					content=" Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum maiores,
-					exercitationem repellat fuga alias quam quidem, possimus, ullam repudiandae soluta
-					ex. Magnam, voluptatibus veritatis sapiente repudiandae sit non iure beatae odit,
-					doloribus tenetur, qui praesentium? Mollitia, similique iure a esse vero, quae eum
-					excepturi rerum dolor incidunt voluptates quod id."
-					hashtag="#World News"
-					time="24h"
-					class="default"
-				></trending-info>
-				<trending-info
-					image="./Images/Coffee.png"
-					username="@sampleTwitterUser"
-					content=" Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio officia ad
-					molestiae. Fugit error obcaecati dolores optio similique numquam sit quae cupiditate
-					ipsam animi quos, perferendis iusto. Amet error illo suscipit dolor qui adipisci
-					neque!"
-					hashtag="#World News"
-					time="24h"
-					class="default"
-				></trending-info>
-				<trending-info
-					image="./Images/Coffee.png"
-					username="@sampleTwitterUser"
-					content="Placeholder content"
-					hashtag="#World News"
-					time="24h"
-					class="default"
-				></trending-info>
-				<trending-info
-					image="./Images/Coffee.png"
-					username="@sampleTwitterUser"
-					content="Placeholder content"
-					hashtag="#World News"
-					time="24h"
-					class="default"
-				></trending-info>
-				<trending-info
-					image="./Images/Coffee.png"
-					username="@sampleTwitterUser"
-					content="Placeholder content"
-					hashtag="#World News"
-					time="24h"
-					class="default"
-				></trending-info>
-				<trending-info
-					image="./Images/Coffee.png"
-					username="@sampleTwitterUser"
-					content="Placeholder content"
-					hashtag="#World News"
-					time="24h"
-					class="default"
-				></trending-info>
-				<trending-info
-					image="./Images/Coffee.png"
-					username="@sampleTwitterUser"
-					content="Placeholder content"
-					hashtag="#World News"
-					time="24h"
-					class="default"
-				></trending-info>
-			</div>
+			<div class="trending-info"></div>
 		</article>
 	</body>
 
