New alert, gray, primary, success variants added

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
 		</aside>
 
 
-		<main></main>
+		<main>
+			<image-icon class="default"></image-icon>
+		</main>
 
 		<article>
 			<type-style
