--- a/index.html
+++ b/index.html
@@ -104,7 +104,26 @@
 
 
 		<main>
-			<image-icon class="default"></image-icon>
+			<div>
+				<type-style
+					class="size-20px bold default"
+					label="Home"
+				></type-style>
+				<star-icon class="default"></star-icon>
+			</div>
+			<div>
+				<image-icon class="default"></image-icon>
+				<gif-icon class="default"></gif-icon>
+				<analytics-icon class="default"></analytics-icon>
+				<emoji-icon class="default"></emoji-icon>
+				<event-icon class="default"></event-icon>
+				<location-icon class="default"></location-icon>
+				<primary-button
+					label="Tweet"
+					class="default regular"
+				></primary-button>
+			</div>
+
 		</main>
 
 		<article>
