adding HTML mark up for home component

--- a/index.html
+++ b/index.html
@@ -104,26 +104,36 @@
 
 
 		<main>
-			<div>
-				<type-style
-					class="size-20px bold default"
-					label="Home"
-				></type-style>
-				<star-icon class="default"></star-icon>
+			<div id="home">
+				<div>
+					<type-style
+						class="size-20px bold default"
+						label="Home"
+					></type-style>
+					<star-icon class="default"></star-icon>
+				</div>
+				<div>
+					<img src="./Images/Avatar.jpg">
+					<type-style
+						class="size-20px regular default gray"
+						label="What is happening?"
+					></type-style>
+				</div>
+				<div>
+					<div>
+						<image-icon class="default"></image-icon>
+						<gif-icon class="default"></gif-icon>
+						<analytics-icon class="default"></analytics-icon>
+						<emoji-icon class="default"></emoji-icon>
+						<event-icon class="default"></event-icon>
+						<location-icon class="default"></location-icon>
+					</div>
+					<primary-button
+						label="Tweet"
+						class="default regular"
+					></primary-button>
+				</div>
 			</div>
-			<div>
-				<image-icon class="default"></image-icon>
-				<gif-icon class="default"></gif-icon>
-				<analytics-icon class="default"></analytics-icon>
-				<emoji-icon class="default"></emoji-icon>
-				<event-icon class="default"></event-icon>
-				<location-icon class="default"></location-icon>
-				<primary-button
-					label="Tweet"
-					class="default regular"
-				></primary-button>
-			</div>
-
 		</main>
 
 		<article>
