Tweet icon buttons designed and added

--- a/index.html
+++ b/index.html
@@ -134,6 +134,19 @@
 					></primary-button>
 				</div>
 			</div>
+			<div>
+				<comment-icon class="default"></comment-icon>
+				<retweet-icon class="default"></retweet-icon>
+				<retweet-icon-filled class="default"></retweet-icon-filled>
+				<like-icon class="default"></like-icon>
+				<like-icon-filled class="default"></like-icon-filled>
+				<share-icon class="default"></share-icon>
+				<menu-icon class="default"></menu-icon>
+				<official-icon class="default"></official-icon>
+				<promoted-icon class="default"></promoted-icon>
+				<followed-icon class="default"></followed-icon>
+				<pinned-icon class="default"></pinned-icon>
+			</div>
 		</main>
 
 		<article>
