css layout clean up

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 			</footer>
 		</aside>
 
+		<vertical-border class="default"></vertical-border>
 
 		<main>
 			<div id="home">
-				<!-- Home Header -->
 				<div>
 					<type-style
 						class="size-20px bold default"
@@ -137,9 +137,10 @@
 						class="default regular"
 					></primary-button>
 				</div>
-				<!-- Tweet Cards -->
-				<section>
-					<div>
+			</div>
+			<div id="tweet">
+				<div class="tweet-card">
+					<header>
 						<img
 							class="image-style"
 							src="./Images/Avatar.jpg"
@@ -151,8 +152,8 @@
 								class="default alert size-14px bold"
 							></type-style>
 						</div>
-					</div>
-					<div>
+					</header>
+					<section>
 						<div>
 							<type-style
 								label="First Name"
@@ -171,7 +172,7 @@
 						<div>
 							<menu-icon class="default"></menu-icon>
 						</div>
-					</div>
+					</section>
 					<div class="tweet-content">
 						<type-style
 							label="Placeholder content"
@@ -179,7 +180,7 @@
 						></type-style>
 						<img src="./Images/AlgoliaBackground.jpg">
 					</div>
-					<div>
+					<footer>
 						<div>
 							<comment-icon class="default"></comment-icon>
 							<type-style
@@ -204,12 +205,14 @@
 						<div>
 							<share-icon class="default"></share-icon>
 						</div>
-					</div>
-					<horizonal-border class="default">
-						</horizontal-border>
-				</section>
+					</footer>
+				</div>
+				<horizonal-border class="default">
+					</horizontal-border>
 			</div>
 		</main>
+
+		<vertical-border class="default"></vertical-border>
 
 		<article>
 			<type-style
@@ -223,6 +226,7 @@
 			></type-style>
 			<div class="trending-info"></div>
 		</article>
+
 	</body>
 
 </html>
