Dynamic tweet data added

--- a/index.html
+++ b/index.html
@@ -138,76 +138,7 @@
 					></primary-button>
 				</div>
 			</div>
-			<div id="tweet">
-				<div class="tweet-card">
-					<header>
-						<img
-							class="image-style"
-							src="./Images/Avatar.jpg"
-						>
-						<div>
-							<like-icon-filled class="default"></like-icon-filled>
-							<type-style
-								label="Liked"
-								class="default alert size-14px bold"
-							></type-style>
-						</div>
-					</header>
-					<section>
-						<div>
-							<type-style
-								label="First Name"
-								class="default size-20px bold"
-							></type-style>
-							<official-icon class="default"></official-icon>
-							<type-style
-								label="@Username"
-								class="default gray size-14px regular"
-							></type-style>
-							<type-style
-								label="24 hour ago"
-								class="default gray size-14px regular"
-							></type-style>
-						</div>
-						<div>
-							<menu-icon class="default"></menu-icon>
-						</div>
-					</section>
-					<div class="tweet-content">
-						<type-style
-							label="Placeholder content"
-							class="default gray size-16px-body"
-						></type-style>
-						<img src="./Images/AlgoliaBackground.jpg">
-					</div>
-					<footer>
-						<div>
-							<comment-icon class="default"></comment-icon>
-							<type-style
-								label="100"
-								class="default primary size-14px-body"
-							></type-style>
-						</div>
-						<div>
-							<retweet-icon class="default"></retweet-icon>
-							<type-style
-								label="100"
-								class="default success size-14px-body"
-							></type-style>
-						</div>
-						<div>
-							<like-icon class="default"></like-icon>
-							<type-style
-								label="100"
-								class="default alert size-14px-body"
-							></type-style>
-						</div>
-						<div>
-							<share-icon class="default"></share-icon>
-						</div>
-					</footer>
-				</div>
-			</div>
+			<div id="tweet"></div>
 		</main>
 
 		<vertical-border class="default"></vertical-border>
